Fixed layout on tablet and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,9 @@ footer {
     background-color: maroon ;
   }
   
+  .col-3 {
+    width: 50%;
+  }
 }
 
 
@@ -98,10 +101,13 @@ footer {
 
   #column-3 {
     background-color:greenyellow ;
+    width: 33.3%;
   }
 
   footer {
     background-color:lawngreen ;
   }
-   
+  col-3 {
+    width: 33.3%;
+  } 
 }
